--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JustCabyr/gdl-be#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "prisma": "^4.8.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2"
   }
 }
